--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <p>Completa este formulario:</p>
 
-            <input id="nom1" type="text" placeholder=" Tú Nombre">
+            <input id="nom1" type="text" placeholder=" Tu Nombre">
             <input id="nom2" type="text" placeholder="Su Nombre">
 
             <button id="boton">Hacer test</button>
