--- a/index.html
+++ b/index.html
@@ -1,43 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="test.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <title>Test del Amor</title>
-</head>
-
-<body id="body">
-
- 
+<html lang="es">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" href="test.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <title>Test del Amor</title>
+    </head>
+    <body id="body"> 
     <div id="todo">
-
-      <p><a href="#" id="logo"><img src="img/Captura de pantalla 2022-06-08 102306.png"></a></p>  
-       
-
+        <center><img id="logo" src="img/Captura de pantalla 2022-06-08 102306.png"/></center>
         <div id="form">
-
             <p>Completa este formulario:</p>
-
-            <input id="nom1" type="text" placeholder=" Tu Nombre">
+            <input id="nom1" type="text" placeholder="Tu Nombre">
             <input id="nom2" type="text" placeholder="Su Nombre">
-
             <button id="boton">Hacer test</button>
-
         </div>
-
         <div id="resultado" class="res"></div>
-
     </div>
-
     <script>
-
         $('#boton').click(() => {
             // console.log('[+]Has pulsado el boton')
 
@@ -84,7 +69,5 @@
     })
 
     </script>
-
-</body>
-
+    </body>
 </html>
